--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 \templates\ШАБЛОН\Noti_fl.tpl
 </pre>
 <br>
-прдключить к шаблону файл <pre>main.js</pre> или скопировать его в конец своего js файла
+Подключить к своему шаблону файл <pre>main.js</pre> или скопировать его в конец своего js файла
 <br>
 <b>5.1</b> Для архива обновлений: открыть <pre>\engine\engine.php</pre> <br>
  и там найти <pre>elseif ($do == 'xfsearch') $nam_e = $xf;</pre> <br>
