--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 \templates\ШАБЛОН\Noti_fl.tpl
 </pre>
 <br>
-Подключить к своему шаблону файл <pre>main.js</pre> или скопировать его в конец своего js файла
+подключить к шаблону файл <pre>main.js</pre> или скопировать его в конец своего js файла
 <br>
 <b>5.1</b> Для архива обновлений: открыть <pre>\engine\engine.php</pre> <br>
  и там найти <pre>elseif ($do == 'xfsearch') $nam_e = $xf;</pre> <br>
@@ -153,7 +153,12 @@ case "notice" :
 <br>
 <i>оформлеие можно взять из файла styles.css</i>
 <br>
-
+</span>
+<br>
+<h3>Обновление</h3>
+<span class="infodect">
+<b>UPD 1.</b> Добавлена поддержка нового тега - <pre>[catlist=1,2] текст [/catlist]</pre> - Выводит текст в теге, если новость принадлежит указанным категориям.
+<br>Тег доступен в шаблонах <pre>Noti_ml.tpl</pre>и <pre>Noti_fl.tpl</pre>
 </span>
 <br>
 <br>
